feat, fix and chore: msc structure, abstract factory routes, model based at firestore instance and joi to validate body

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,2 @@
-NODE_ENV=development
-API_PORT=3001
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_USER=user
-MYSQL_PASSWORD=password
-MYSQL_DB_NAME=medcloud-database
-EVAL_ALWAYS_RESTORE_DEV_DB=true
-DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
+GOOGLE_APPLICATION_CREDENTIALS=/home/some/path/project.json
+DATABASE_URL='https://<FAKE_DATABASE>.firebaseio.com'
