--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,15 @@
 {
   "name": "teppa-backend",
   "version": "1.0.0",
-  "main": "./src/api/server.mjs",
+  "main": "./src/index.ts",
   "description": "Backend do projeto teppa-full-stack-test",
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "engineStrict": true,
-  "private": true,
   "keywords": [],
   "author": "Lucas Pinheiro",
   "license": "ISC",
   "scripts": {
+    "start": "node .",
+    "dev": "ts-node-dev src/index.ts",
+    "build": "/bin/sh tsc_eval.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
@@ -24,9 +22,9 @@
     "@typescript-eslint/parser": "^5.34.0",
     "eslint": "^8.22.0",
     "nodemon": "^2.0.19",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@joi/date": "^2.1.0",
@@ -35,6 +33,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "firebase-admin": "^11.0.1",
     "joi": "^17.6.0"
   }
 }
