feat: aplying ci integration tests

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,13 @@
 FROM node:lts
 
-USER node
+WORKDIR /app
 
-RUN mkdir -p /home/node/app
-
-WORKDIR /home/node/app
-
-COPY --chown=node package*.json ./
+COPY ./package*.json ./
 
 RUN npm install
 
-COPY --chown=node . .
+COPY . .
 
-ENV HOST=0.0.0.0 PORT=3000
-
-EXPOSE ${PORT}
-
-RUN npx prisma generate
+EXPOSE 3001
 
 CMD ["npm", "run", "dev"]
