--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,22 @@
     "dev": "ts-node-dev src/index.ts",
     "build": "/bin/sh tsc_eval.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:integration:dev": "mocha -r ts-node/register src/tests/integration/*.test.ts --exit -t 60000",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.34",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
+    "chai": "^4.3.6",
     "eslint": "^8.22.0",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
+    "sinon": "^14.0.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
@@ -29,6 +34,7 @@
   "dependencies": {
     "@joi/date": "^2.1.0",
     "body-parser": "^1.20.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
