--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,15 +2,22 @@
   "name": "vite-project",
   "private": true,
   "version": "1.0.0",
+  "description": "Front-end do projeto",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
+    "joi": "^17.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0"
   },
